bugs Fixing in transection and customer controllers
